<resources>
    <string name="app_name">MovieLix</string>

    <string name="tab_left">Valoraciones</string>
    <string name="tab_right">Amigos</string>

    <string name="my_reviews">Mis valoraciones</string>
    <string name="friend_toolbar">Pepito Fernández</string>
    <string name="my_friends">Mis amigos</string>

    <string name="profile_toolbar">Mi perfil</string>

    <string name="navigation_drawer_open">Navigation drawer opened</string>
    <string name="navigation_drawer_close">Navigation drawer closed</string>
    <string name="navigation_item_reviews">Mis valoraciones</string>
    <string name="navigation_item_friends">Mis amigos</string>
    <string name="navigation_item_feedback">Valóranos</string>
    <string name="navigation_item_licencias">Licencias</string>
    <string name="navigation_item_salir">Cerrar sesión</string>
    <string name="navigation_profile_name">Dani Mancebo</string>
    <string name="navigation_profile_email">daniel.m.aldea@hotmail.com</string>

    <string name="movie_summary_header">Sinopsis</string>
    <string name="movie_summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam varius orci at imperdiet accumsan. Sed sagittis turpis ut turpis ullamcorper luctus. Praesent arcu lorem, congue tempus auctor a, cursus at est. Nullam ullamcorper, tellus et porttitor trist…</string>
    <string name="movie_friends_reviews_header">Tus amigos opinan esto</string>
    <string name="movie_pg_rating">PG13</string>

    <string name="reviews_item_name">Rebecca la ha valorado con:</string>
    <string name="reviews_item_movie">La La Land</string>
    <string name="reviews_item_movie_info">(2016) - Comedia, Romance</string>
    <string name="reviews_item_movie_genre">Comedia, Romance</string>
    <string name="reviews_item_movie_date">(2016)</string>
    <string name="reviews_item_movie_overview">Mia (Emma Stone), una joven aspirante a actriz que trabaja como camarera mientras acude a castings, y Sebastian (Ryan Gosling), un …</string>
    <string name="reviews_item_movie_duration">2h 8m</string>
    <string name="reviews_item_movie_rating_1">3 /</string>
    <string name="reviews_item_movie_rating_2">5</string>

    <string name="friend_num_reviews">12</string>
    <string name="friend_num_reviews_2">$1 valoraciones</string>
    <string name="friend_num_followers">$1 seguidores</string>
    <string name="friend_num_followers_singular">$1 seguidor</string>
    <string name="friend_num_friends">$1 seguidos</string>
    <string name="friend_num_friends_singular">$1 seguido</string>
    <string name="friend_follow">Seguir</string>
    <string name="friend_unfollow">Siguiendo</string>

    <string name="rating_image">Rating image</string>

    <string name="profile_sign_out">CERRAR SESIÓN</string>
    <string name="profile_delete_account">BORRAR CUENTA</string>

    <string name="intro_slogan">Todas las opiniones que te importan\n en un sólo sitio.</string>
    <string name="intro_register">REGISTRAR</string>
    <string name="intro_login">ENTRAR</string>
    <string name="intro_terms">Términos y condiciones</string>
    <string name="register_option">O REGÍSTRATE CON</string>
    <string name="login_option">O ENTRA CON</string>
    <string name="login_forget_password">¿Has olvidado la contraseña?</string>

    <string name="register_ok">Te has registado correctamente.\n\nPulsa para continuar.</string>
    <string name="login_ok">Has iniciado sesión correctamente.\n\nPulsa para continuar.</string>

    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>

    <string name="wrong_name">Nombre incorrecto</string>
    <string name="wrong_email">Email incorrecto</string>
    <string name="wrong_password">Contraseña incorrecta (6 caracteres min)</string>

    <string name="something_went_wrong">¡Oops! Algo ha ido mal</string>
    <string name="email_already_register">Este email ya ha sido registrado</string>
    <string name="user_not_found">Usuario no encontrado, por favor regístrate</string>
    <string name="email_used_with_different_provider">Este email ya se ha registado con otro proveedor</string>

    <string name="review_sent">¡Valoración enviada!</string>
    <string name="review_error">¡Ops! Tu valoración no se ha podido enviar.</string>

    <string name="reviews_no_users">¡Vaya! Aún no tienes ningún amigo.\nVe a la pantalla de Mis Amigos y añádelos.</string>
    <string name="reviews_no_reviews">¡Vaya! Parece que tus amigos no han hecho ninguna valoración.</string>

    <string name="facebook_app_id">592176878302149</string> <string name="fb_login_protocol_scheme">fb592176878302149</string>

    <string name="search_bar_placeholder">Buscar película o serie</string>
    <string name="users_search_bar_placeholder">Buscar usuario</string>
    <string name="search_bar_hint">Buscar</string>

    <string name="no_movies_found">No se ha encontrado ninguna película o serie con los términos\n\"$1\"</string>
    <string name="no_users_found">No se ha encontrado ningún usuario"</string>
    <string name="movie_suggestion_extra_info">($1) - $2</string>
    <string name="add_review_descriptor">Añadir valoracion</string>
    <string name="add_friend_descriptor">Añadir amigo</string>

    <string name="no_reviews">No has hecho ninguna valoración todavía.</string>
    <string name="friend_no_reviews">$1 no ha hecho ninguna valoración todavía.</string>
    <string name="no_friends">No has añadido ningún amigo todavía.</string>
</resources>
