<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/review_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="152dp"
                    android:paddingStart="142dp"
                    android:paddingEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/border_transparent"
                    android:orientation="vertical">

                    <com.movielix.font.MovieLixTextView
                        android:id="@+id/review_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/reviews_item_movie"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textSize="16sp"
                        android:textColor="@color/textLight"
                        app:customFont="Raleway-SemiBold.ttf" />

                    <com.movielix.font.MovieLixTextView
                        android:id="@+id/review_release_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/reviews_item_movie_info"
                        android:textSize="12sp"
                        android:textColor="@color/textIdle"
                        app:customFont="Raleway-Regular.ttf" />

                    <com.movielix.font.MovieLixTextView
                        android:id="@+id/review_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="12sp"
                        android:textColor="@color/textIdle"
                        android:ellipsize="end"
                        android:maxLines="4"
                        android:text="@string/reviews_item_movie_overview"
                        app:customFont="Raleway-Regular.ttf" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:gravity="bottom">

                        <com.movielix.font.MovieLixTextView
                            android:id="@+id/review_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_duration"
                            android:paddingEnd="8dp"
                            android:paddingStart="8dp"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:textColor="@color/textLight"
                            android:text="@string/reviews_item_movie_duration"
                            app:customFont="Raleway-Regular.ttf" />

                    </LinearLayout>

                </LinearLayout>

                <include layout="@layout/friend_review"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/review_cover"
        android:layout_width="126dp"
        android:layout_height="168dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/idle_placeholder"
        android:scaleType="centerCrop"
        android:elevation="4dp"
        app:riv_corner_radius="2dp"/>

</FrameLayout>